Complete simple service

--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Msg_id: {{ id }}</h1>
-    <h3>Label: {{ label }}</h3>
+    <h3>{{ label }}</h3>
     <b>msg txt</b>: {{ txt }}
 </body>
 </html>
