Score: 0.88538 with ExtraTreesClassifier

--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -5,6 +5,7 @@
 <body>
     <h1>Msg_id: {{ id }}</h1>
     <h3>Label: {{ label }}</h3>
+    <h3>Score: {{ score }}</h3>
     <b>msg txt</b>: {{ txt }}
 </body>
 </html>
