--- a/src/templates/feed_block.html
+++ b/src/templates/feed_block.html
@@ -1,2 +1,11 @@
-<b>{{ rec['msg_id'] }}</b>: {{ rec['msg_txt'] }}
-<br>
+<tr>
+    <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+        {{ rec['id'] }}
+    </td>
+    <td class="truncate border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+        {{ rec['prob'] }}
+    </td>
+    <td class="truncate border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">
+        {{ rec['txt'] }}
+    </td>
+</tr>
